--- a/ProjetoBiblioteca/ProjetoBiblioteca.csproj
+++ b/ProjetoBiblioteca/ProjetoBiblioteca.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.net-next" Version="4.0.3" />
     <PackageReference Include="MySql.Data" Version="9.4.0" />
   </ItemGroup>
 
